# cpp-example

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Readme.md
include/: ginglib.h
src/: ginglib.cpp  ginglib.h
test/: test.cpp
